--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,4 @@
-<div id="main-content">
+<div class="one-column">
   <div class="widget widget-light">
     <div class="w-inner">
       <div class="w-title">Proje Oluştur</div>
@@ -8,7 +8,5 @@
 
     </div>
   </div>
-</div><!-- end of #main-content -->
+</div><!-- end of .one-column -->
 
-
-<%= render 'layouts/sidebar'%>
