--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1258,7 +1258,8 @@ body {
       border: 1px solid #FF9900;
       margin-bottom: 20px;
       margin-top: 0px;
-      padding: 10px;
+      padding: 15px;
+      padding-left: 50px;
       /* Rounded  Corners */
       -webkit-border-radius: 5px;
       -khtml-border-radius: 5px;
@@ -1275,9 +1276,10 @@ body {
       border:1px solid #FF9900;
     }
 
-    .msg-info {
+    .msg-notice {
       background-color:#FFFFFF;
       background-image:url(images/icon_info.gif);
+      border: 1px solid #0A3663;
     }
     .msg-alert {
       background-color:#FFFF99;
@@ -1307,7 +1309,20 @@ body {
       position: relative;
       font-size:24px;
       margin-bottom: 20px;
-      background: #EEE; }
+      background: #EEE;
+    }
+
+    .comment-bubble h1{
+      line-height: 1.3;
+      font-size: 24px;
+    }
+
+    .comment-bubble h6{
+      font-weight: normal;
+      margin-bottom: 0;
+      font-style: italic;
+      font-size: 18px;
+    }
 
     .comment-arrow{
       position:absolute;
@@ -1317,6 +1332,58 @@ body {
       width:21px;
       height:25px;
     }
+
+
+    /*
+    ** Progress Bar
+    */
+    .progress-bar{
+        background: url('images/profile_bar_background.png') 50px 0 repeat-x;
+        height: 30px;
+        width: 677px;
+        border: 1px solid #DDD;
+        padding: 3px;
+        position: relative;
+        margin-bottom: 20px;
+    }
+
+    .pb-value{
+        background: url('images/profile_bar.png') 0 0 repeat-y;
+        height: 30px;
+        width: 100%;
+    }
+
+    .pb-reflection{
+        background-image: -webkit-gradient(
+            linear,
+            left bottom,
+            left top,
+            color-stop(0, rgba(235,235,235,.3)),
+            color-stop(0.56, rgba(255,255,255, 0)),
+            color-stop(1, rgba(245,245,245,.3))
+        );
+        background-image: -moz-linear-gradient(
+            center bottom,
+            rgba(235,235,235, .3) 0%,
+            rgba(255,255,255, 0) 56%,
+            rgba(245,245,245, .3) 100%
+        );
+        width: 100%;
+        height: 100%;
+    }
+
+    .pb-toplanan,
+    .pb-hedef {
+      position: absolute;
+      top: 0;
+      right: 10px;
+      line-height: 38px;
+    }
+
+    .pb-hedef {
+      left: 10px;
+    }
+
 
 
     /*
@@ -1438,11 +1505,29 @@ body {
 
 
 
-.share-options{
+.share-options {
   position:absolute;
   right:5px;
   bottom:10px;
 }
+
+.share-options ul{
+  list-style: none;
+}
+
+.share-options li {
+  float: left;
+  margin-left: 10px;
+  height: 20px;
+  line-height: 20px;
+  font-size: 12px;
+}
+
+.description{
+  margin-bottom: 20px;
+  line-height: 1.5;
+}
+
 
 #page_goal {
   width: 100px;
