updated user links

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,9 +32,12 @@
             </ul>
           <% end %>
              <br />
+
+
+
           <ul>
-           	 <li><%= link_to "Bağış Kampanyalarım", my_pages_path %></li>
-             <li><%= link_to "Bağış Kampanyası Düzenle", new_page_path %></li>
+           	 <li><%= link_to "Bağış Sayfalarım", my_pages_path %></li>
+             <li><%= link_to "Bağış Sayfası Yarat", new_page_path %></li>
           </ul>
              <br />
 
