--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -1,3 +1,10 @@
-<h1>Bizimle Iletişime Geçin</h1>
+<div id="main-content">
+  <div class="widget widget-light" id="w-yeni-kayit">
+    <div class="w-inner">
+      <div class="w-title">İletişim</div>
+        <%= render 'form' %>
+    </div>
+  </div>
+</div>
 
-<%= render 'form' %>
+<%= render 'layouts/sidebar'%>
