--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -30,7 +30,7 @@
 
   <div class="widget widget-light widget-aktif-bagis ">
     <div class="w-inner clearfix">
-      <div class="w-title">Aktif Bağış Kampanyaları</div>
+      <div class="w-title">Aktif Bağış Sayfaları</div>
       <div class="w-content">
       <%@organization.pages.each do |page|%>
         <div class="row">
