--- a/app/views/layouts/_sidebar.erb
+++ b/app/views/layouts/_sidebar.erb
@@ -11,11 +11,12 @@
     </div>
   </div>
 
-  <div id="w-facebook" class="widget widget-dark">
+
+  <!-- <div id="w-facebook" class="widget widget-dark">
     <div class="w-inner">
       <iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FBen-Varim%2F135114429880530&amp;width=260&amp;colorscheme=light&amp;show_faces=true&amp;stream=false&amp;header=true&amp;height=62" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:260px; height:62px;" allowTransparency="true"></iframe>
     </div>
-  </div><!-- end of .widget -->
+  </div>-->
 
 
   <div id="w-twitter" class="widget widget-dark">
