fixed fundraising page.

--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -33,7 +33,7 @@
 
   <div class="field">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_area :title %>
   </div>
   <div class="field">
     <%= f.label :logo %>
@@ -51,7 +51,7 @@
     <%= f.text_field :goal %>
   </div>
   <div class="actions">
-    <%= f.submit "Bağış Kampanyası Oluştur", :class => "button yellow super" %>
+    <%= f.submit "Bağış Sayfası Yarat", :class => "button yellow super" %>
   </div>
 <% end %>
 
