--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -62,6 +62,26 @@
 
 <div id="main-content">
 
+  <div class="widget widget-light widget-aktif-bagis widget-liste">
+    <div class="w-inner clearfix">
+      <div class="w-title">Deskteleyenler</div>
+      <div class="w-content">
+<%@payments.each do |payment|%>
+        <div class="row clearfix">
+            <div class="bagis-miktari"><%=payment.amount_str%><span>TL</span></div>
+            <blockquote><span>“</span> <%=payment.note%></blockquote>
+            <div class="bagisci"><%=payment.name%></div>
+        </div><!-- end of .row -->
+<% end %>
+        <div class="row center">
+            <%=link_to "Ben de bağış kampanyası düzenlemek istiyorum!", new_page_for_project_path(@page.project), :class => "green button super"%>
+        </div><!-- end of .row -->
+
+
+      </div>
+    </div>
+  </div>
+
   <div class="widget widget-light widget-aktif-bagis ">
     <div class="w-inner clearfix">
       <div class="w-title">Bağışçı Listesi</div>
