--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -49,7 +49,8 @@
   <div id="wrapper">
     <div id="header">
       <div class="container">
-        <div id="header-logo"><a href="http://www.benvarim.com" title="BenVarım.com Anasayfa" rel="facebox">benvarim.com</a></div>
+        <div id="header-logo">
+          <%=link_to "benvarim.com", :root%></div>
         <div id="header-subtitle">Kolay bağış platformu</div>
         <div id="site-nav">
           <ul class="clearfix">
