--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,12 +21,16 @@
         <div class="campaign-form-container">
           <h2>Bağış kampanyası düzenlemek istiyorum.</h2>
 
-          <form action="#" method="post">
+          <form action="<%=url_for :new_page%>" method="get">
             <div class="field">
-              <input value="Desteklemek istediğiniz vakıf yada derneği seçiniz..." name="search" class="clear-on-focus" id="featured-input">
+              <input value="Desteklemek istediğiniz vakıf yada derneği seçiniz..." class="clear-on-focus" id="featured-input"/>
+              <input type="hidden" name="org_id" value="" id="org_id"/>
             </div>
-            <input type="submit" value="Başla" name="commit" id="featured-submit" class="button super yellow button-primary no-margin">
+            <input type="submit" value="Başla"  id="featured-submit" class="button super yellow button-primary no-margin">
           </form>
+          <script>
+            var availableOrganizations = <%=raw @available_organizations.to_json%>;
+          </script>
         </div>
       </div><!-- end of .fc-inner -->
     </div>
