--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -51,7 +51,11 @@
     <%= f.text_field :goal %>
   </div>
   <div class="actions">
-    <%= f.submit "Bağış Sayfası Yarat", :class => "button yellow super" %>
+    <%if @page.new_record?%>
+      <%=f.submit "Bağış Sayfası Yarat", :class => "button yellow super"%>
+    <%else%>
+      <%=f.submit "Değişiklikleri Kaydet", :class => "button yellow super"%>
+    <%end%>
   </div>
 <% end %>
 
