--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -4,19 +4,25 @@
   <div class="w-inner clearfix">
     <div class="w-content">
       <div class="fullcontent-left">
-        <% if user_signed_in? && @page.user == current_user %>
-          <%= link_to 'Düzenle', edit_page_path(@page) %>
-        <% end %>
 
-        <%= image_tag @page.user.photo.url(:thumb) %>
+        <div class="userpic">
+          <%= image_tag @page.user.photo.url(:thumb) %>
+        </div>
 
         <div class="related-organization">
           <h2>Desteklediği Kuruluş:</h2>
-          <h3><%= link_to @page.organization.name, @page.organization%></h3>
-          <h6><%= link_to @page.project.name, @page.project %></h6>
-          <%= image_tag @page.organization.logo.url(:thumb) %>
-          <p class="small"><%=@page.organization.description[0..200]%>
-           <%= link_to "devamı", @page.organization%></p>
+          <div class="ro-details">
+            <h3><%= link_to @page.organization.name, @page.organization%></h3>
+            <h4><%= link_to @page.project.name, @page.project %></h4>
+            <p class="small"><%= image_tag @page.organization.logo.url(:thumb) %> <%=@page.organization.description[0..200]%> <%= link_to "devamı", @page.organization%></p>
+
+          </div>
+        </div>
+
+        <div class="profile-actions">
+          <% if user_signed_in? && @page.user == current_user %>
+            <%= link_to 'Düzenle', edit_page_path(@page) %>
+          <% end %>
         </div>
       </div>
 
@@ -38,21 +44,26 @@
         </div><!-- .comment-bubble -->
 
         <div class="description">
-          <%= @page.description %>
+          <span style="float:right; margin: 0 0 10px 10px;"<%= image_tag @page.logo.url(:thumb) %></span> <%= @page.description %>
         </div>
 
-        <div class="progress-bar">
-          <div class="pb-value" rel="width: <%=@page.collect_ratio_str%>%;">
-            <div class="pb-reflection"></div>
-            <div class="pb-hedef">HEDEF: <%= @page.goal %>  TL</div>
-            <div class="pb-toplanan">TOPLANAN: <%= @page.collected %> TL</div>
+        <div class="progress-bar-container clearfix">
+
+          <div class="progress-bar rc clearfix">
+            <div class="pb-value rc" style="width: <%=@page.collect_ratio_str%>%;">
+              <div class="pb-reflection rc"></div>
+              <div class="pb-hedef">HEDEF: <%= @page.goal %>  TL</div>
+              <div class="pb-toplanan">TOPLANAN: <%= @page.collected %> TL</div>
+            </div>
           </div>
-        </div>
 
-        <%=link_to "Bağış Yap", donate_popup_path(@page), :class => "yellow button super no-margin", :rel => "facebox"%>
+          <div class="pb-action">
+            <%=link_to "Bağış Yap", donate_popup_path(@page), :class => "yellow button super no-margin", :rel => "facebox"%>
+          </div>
+
+        </div>
 
         <div class="photo-gallery">
-          <%= image_tag @page.logo.url(:thumb) %>
         </div>
 
       </div>
