--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1337,21 +1337,30 @@ body {
     /*
     ** Progress Bar
     */
+    .progress-bar-container{
+      height: auto;
+      width: 100%;
+      margin-bottom: 30px;
+    }
+
     .progress-bar{
-        background: url('images/profile_bar_background.png') 50px 0 repeat-x;
-        height: 30px;
-        width: 677px;
+        height: 36px;
+        width: 540px;
         border: 1px solid #DDD;
         padding: 3px;
         position: relative;
-        margin-bottom: 20px;
+        float: left;
+
+        background: #eeeeee; /* old browsers */
+        background: -moz-linear-gradient(top, #eeeeee 0%, #E2E2E2 50%, #eeeeee 100%); /* firefox */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eeeeee), color-stop(50%,#E2E2E2), color-stop(100%,#eeeeee)); /* webkit */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#eeeeee',GradientType=0 ); /* ie */
     }
 
     .pb-value{
         background: url('images/profile_bar.png') 0 0 repeat-y;
-        height: 30px;
-        width: 100%;
-    }
+        height: 100%;
+     }
 
     .pb-reflection{
         background-image: -webkit-gradient(
@@ -1368,20 +1377,28 @@ body {
             rgba(255,255,255, 0) 56%,
             rgba(245,245,245, .3) 100%
         );
-        width: 100%;
-        height: 100%;
+         height: 100%;
     }
 
     .pb-toplanan,
     .pb-hedef {
+      color: #444444;
+      line-height: 42px;
       position: absolute;
+      text-shadow: 0 0 1px #AAAAAA;
       top: 0;
-      right: 10px;
-      line-height: 38px;
+    }
+
+    .pb-toplanan{
+      left: 10px;
     }
 
     .pb-hedef {
-      left: 10px;
+      right: 10px;
+    }
+
+    .pb-action{
+      float: right;
     }
 
 
@@ -1469,35 +1486,40 @@ body {
 
 
 
-/*
+/*************************************************************************************
  * PAGE SPECIFIC STYLES
  *
- */
+ * These are the page specific styles for all the unique pages in the site.
+ *
+ *
+*************************************************************************************/
 
- /*
-  * KURUM
-  */
+
+
+
+/*************************************************************************************
+** KURUM
+*************************************************************************************/
 .fullcontent-left{
-  width: 182px;
-  float: left;
-  padding:3px;
-  background: #FFF; }
+ width: 182px;
+ float: left;
+ background: #FFF; }
 
 .fullcontent-left img{
-  background: none repeat scroll 0 0 #FFFFFF;
-  border: 1px solid #DDD;
-  height: auto;
-  padding: 3px;
-  width: 174px;
-  margin-bottom:5px;}
+ background: none repeat scroll 0 0 #FFFFFF;
+ border: 1px solid #DDD;
+ height: auto;
+ padding: 3px;
+ width: 174px;
+ margin-bottom:5px;}
 
 .fullcontent-left .button{
-   text-align: center;
-   width: 120px;}
+  text-align: center;
+  width: 120px;}
 
 .fullcontent-right{
-   float:right;
-   width: 710px; }
+  float:right;
+  width: 710px; }
 
 
 
@@ -1506,32 +1528,90 @@ body {
 
 
 .share-options {
-  position:absolute;
-  right:5px;
-  bottom:10px;
+ position:absolute;
+ right:5px;
+ bottom:10px;
 }
 
 .share-options ul{
-  list-style: none;
+ list-style: none;
 }
 
 .share-options li {
-  float: left;
-  margin-left: 10px;
-  height: 20px;
-  line-height: 20px;
-  font-size: 12px;
+ float: left;
+ margin-left: 10px;
+ height: 20px;
+ line-height: 20px;
+ font-size: 12px;
 }
 
 .description{
-  margin-bottom: 20px;
-  line-height: 1.5;
+ margin-bottom: 20px;
+ line-height: 1.5;
 }
 
 
 #page_goal {
-  width: 100px;
+ width: 100px;
 }
+
+
+
+/*************************************************************************************
+** BAGIS SAYFASI
+*************************************************************************************/
+.related-organization {
+    margin-bottom: 20px;
+}
+
+.userpic {
+  margin-bottom: 20px;
+}
+.userpic img {
+  margin-bottom: 0;
+}
+
+.ro-details {
+
+}
+
+.ro-details img {
+    float: right;
+    height: auto;
+    margin: 0 0 0 5px;
+    width: 60px;
+}
+
+.related-organization p {
+    font-size: 85%;
+}
+
+.related-organization h2{
+  font-size: 16px;
+  color: #444;
+  margin-bottom: 10px;
+ }
+
+.ro-details h3 {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.ro-details h4 {
+  font-weight: normal;
+  font-size: 13px;
+  display: none;
+}
+
+.profile-actions{
+  margin-top: 30px;
+  padding-top: 10px;
+  border-top: 1px solid #EEE;
+  font-size: 11px;
+}
+
+
+
 
 
 
