Final Commit of The Day.

--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -7,11 +7,7 @@
 
       <%= render 'form' %>
 
-
+      <%= link_to 'Görüntüle', @page %> | <%= link_to 'Geri', pages_path %>
     </div>
   </div>
 </div><!-- end of .one-column -->
-
-
-<%= link_to 'Görüntüle', @page %> |
-<%= link_to 'Geri', pages_path %>
