--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,17 +3,6 @@
     <div class="w-inner">
       <div class="w-title">Yeni Kayıt Oluştur</div>
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-        <% if resource.errors.any? %>
-          <div class="msg msg-error">
-            <h2><%=resource.errors.count%> hata:</h2>
-
-            <ul>
-            <% resource.errors.full_messages.each do |msg| %>
-              <li><%= msg %></li>
-            <% end %>
-            </ul>
-          </div>
-        <% end %>
 
         <div class="field">
           <%= f.label :name %>
@@ -32,6 +21,9 @@
 
         <div class="actions"><%= f.submit "Kayıt Ol", :class=>"button super yellow button-primary" %></div>
       <% end %>
+
+      <%= render :partial => "devise/shared/links" %>
+
 
     </div>
   </div>
