--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -3,9 +3,9 @@
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Yeni Kayıt Oluştur", new_registration_path(resource_name) %> 
+  <%= link_to "Yeni Kayıt Oluştur", new_user_registration_path %>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  <%= link_to "Şifrenizi mi unuttunuz?", new_password_path(resource_name) %> 
+  <%= link_to "Şifrenizi mi unuttunuz?", new_password_path(resource_name) %>
 <% end -%>
