--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -42,7 +42,7 @@
         <input type="submit" value="Gönder" name="commit" class="yellow button large">
       </div>
 
-      <small>Ödeme tuşuna bastıktan sonra ödeme bilgilerinizi girmek için %100 güvenli ödeme sistemi Paypal'a yönlendirileceksiniz. Ödeme sonrası makbuzunuz e-posta adresinize gönderilecek ve benvarim.com'a geri geleceksiniz.</small>
+      <small>Gönder tuşuna bastıktan sonra ödeme bilgilerinizi girmek için %100 güvenli ödeme sistemi Paypal'a yönlendirileceksiniz. Ödeme yaptıktan sonra makbuzunuz e-posta adresinize gönderilecek ve benvarim.com'a geri geleceksiniz.</small>
 
     </div>
   </div>
