--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<%=render :partial => 'layouts/errors'%>
 
 <div class="widget widget-light widget-kurum ">
   <div class="w-inner clearfix">
