--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,7 +1,16 @@
 <h2>Şifremi Değiştir</h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+  <% if resource.errors.any? %>
+    <div id="error_explanation">
+      <ul>
+      <% resource.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+    <br/>
+  <% end %>
   <%= f.hidden_field :reset_password_token %>
 
   <p><%= f.label :password %><br />
