--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,19 @@
   <div class="widget widget-light" id="w-yeni-kayit">
     <div class="w-inner">
       <div class="w-title">Yeni Kayıt Oluştur</div>
+      <% if resource.errors.any? %>
+        <div id="error_explanation">
+          <h2>Kullanıcı yaratılamadı<br/>
+              Lütfen aşagıdaki hataları düzeltiniz!</h2>
+          <ul>
+          <% resource.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+          </ul>
+        </div>
+        <br/>
+      <% end %>
+
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 
         <div class="field">
