--- a/app/views/projects/_list_projects.html.erb
+++ b/app/views/projects/_list_projects.html.erb
@@ -10,19 +10,13 @@
               <h3><%= link_to project.name, project %></h3>
               <p><%= project.description %></p>
               <p><%= project.organization.name %></p>
-
-
               <p><%= link_to 'Görüntüle', project %></p>
-              <% if (defined? show_edit_link) && show_edit_link %>
-                <p><%= link_to 'Düzenle', edit_project_path(project) %></p>
-              <% end %>
-
             </div>
           </div>
         <% end %>
       </div>
 
-      <% unless current_user.organization.nil? %>
+      <% if (current_user && current_user.organization) %>
         <div class="row-action">
           <%= link_to 'Yeni bağış projesi oluştur!', new_project_path, :class=>"green button super" %>
         </div>
