--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -125,36 +125,26 @@
 
   <div class="widget widget-light widget-aktif-bagis ">
     <div class="w-inner clearfix">
-      <div class="w-title">Bağışçı Listesi</div>
+      <div class="w-title">Sıkça Sorulan Sorular</div>
       <div class="w-content">
 
 
         <div class="row">
-            <h2><a href="#">23 Nisan Çocuk Şenliği</a></h2>
-            <a href="#" class="yellow button right no-margin">Destekle</a>
-            <p>2002'den itibaren 23 Nisan şenlikleri düzenlemeye başladık. Gerçek çocuk şenlikleri! Okay Temiz eşliğinde davul dersleri, dans, satranç, resim, surat boyama... Bayram gibi bayram yani! <a href="#">Detaylı bilgi</a></p>
-        </div><!-- end of .row -->
-
-
+          <h3>Benvarım.com’da kimler projelerini tanıtabilir ve bağış toplayabilir?</h3>
+          <p>Türkiye Cumhuriyeti'nde yasal olarak bağış toplama yetkisi bulunan vakıf ve derneklerin gönüllüleri ile yöneticileri BenVarım.com platformunu kullanarak sosyal sorumluluk projelerini tanıtabilir  ve bunlar için bağış toplayabilirler</p>
+        </div>
         <div class="row">
-          <h2><a href="#">Temmuz Pikniği - Aziz Nesin'i Anma Günü</a></h2>
-          <a href="#" class="yellow button right no-margin">Destekle</a>
-          <p>Adının anma günü olduğuna bakmayın, can sıkıcı bir merasim değildir, uzun söylevler olmaz, yas tutmayız biz. O gün de piknik yaparız, eğleniriz. Pikniğinizi alın ve gelin. Temmuzun ilk cumartesi günü, saat 1-2 gibi. Davetiyesizdir. <a href="#">Detaylı bilgi</a></p>
-        </div><!-- end of .row -->
-
-
+          <h3>Bağışları BenVarım.com kendi hesabında mı topluyor?</h3>
+          <p>Hayır.  Benvarım.com sosyal sorumluluk projelerininin internaktif bir şekilde tanıtılmasına aracı olan bir platformdur. Benvarım.com bağışçıların direk olarak ilgili vakıf veya derneğe bağışta bulunmalarını sağlar.</p>
+        </div>
         <div class="row">
-            <h2><a href="#">Nesin Matematik Köyü</a></h2>
-            <a href="#" class="yellow button right no-margin">Destekle</a>
-            <p>Şirince köyünün (İzmir - Selçuk) 1 km uzağında, dağ başında ve mutlak bir ıssızlık içinde, yemyeşil bir ortamda, 7'den 70'e herkesin (her köylünün!) her seviyede matematik yaptığı, öğrendiği, öğrettiği ve düşündüğü, Nesin Vakfı'na ait 30 dönümü zeytinlik olmak üzere toplam 55 dönümlük bir köy. Şatafattan ve gösterişten uzak, sade ve içten. Evler taş, çamur ve samandan. <a href="#">Detaylı bilgi</a></p>
-        </div><!-- end of .row -->
-
-
-
-
-
-
-
+          <h3>Kredi kartımla bağış yapabilir miyim?</h3>
+          <p>Evet. Bu aşamada ödeme sistemi olarak kullandığımız PayPal servisi ister kredi kartı veya banka kartı ile, ister sahip olduğunuz PayPal hesabı ile bağış yapma olanağı sağlar.</p>
+        </div>
+        <div class="row">
+          <h3>PayPal ödeme sistemi güvenli midir?</h3>
+          <p>PayPal, tüm dünyada 100 milyondan fazla kullanıcıya sahip, en güvenli internet ödeme arayüzlerinden biridir. PayPal servisi ile yaptığınız kart ödemelerinde hesap bilgilerinizin ne bağış yaptığınız kurum tarafından ne de BenVarım.com platformu tarafından erişilmesine olanak yoktur. Ödemenizi yaparken, BenVarım.com sayfasından kısa süreliğine ayrılıp, PayPal hesabına yönlendirilecek, güvenli şekilde kart numaranızı girip ödemenizi yaptıktan sonra BenVarım platformuna geri yönlendirileceksiniz. PayPal servisi ödemenizi yaptığınız anda hem bağış yaptığınız kuruma eposta ile yapılan bağışı bildirir, hem de BenVarım platformuna ödemenin gerçekleştirildiğini bildirir. BenVarım platformu, bağışçıların ve kurumların güvenliğine en üst seviyede önem veren bir platformdur.</p>
+        </div>
       </div>
     </div>
   </div>
