--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,38 @@
-<h2>Şifremi Değiştir</h2>
-
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <% if resource.errors.any? %>
-    <div id="error_explanation">
-      <ul>
-      <% resource.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+<div class="widget widget-light widget-form" id="w-sifre-unut">
+  <div class="w-inner">
+    <div class="w-title">Şifremi Değiştir</div>
+    <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+      <% if resource.errors.any? %>
+        <div id="error_explanation">
+          <ul>
+          <% resource.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+          </ul>
+        </div>
+        <br/>
       <% end %>
-      </ul>
-    </div>
-    <br/>
-  <% end %>
-  <%= f.hidden_field :reset_password_token %>
+      <%= f.hidden_field :reset_password_token %>
 
-  <p><%= f.label :password %><br />
-  <%= f.password_field :password %></p>
 
-  <p><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></p>
+      <div class="field">
+        <%= f.label :password %>
+        <%= f.text_field :password %>
+      </div>
+      <div class="field">
+        <%= f.label :password_confirmation %>
+        <%= f.text_field :password_confirmation %>
+      </div>
 
-  <p><%= f.submit "Değiştir" %></p>
-<% end %>
 
-<%= render :partial => "devise/shared/links" %>
+       <div class="actions">
+        <%= f.submit "Değiştir", :class=>"button super yellow button-primary" %>
+      </div>
+
+    <% end %>
+
+    <%= render :partial => "devise/shared/links" %>
+
+
+  </div>
+</div>
