whoops, sifreleri gizle :)

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -17,11 +17,11 @@
 
       <div class="field">
         <%= f.label :password %>
-        <%= f.text_field :password %>
+        <%= f.password_field :password %>
       </div>
       <div class="field">
         <%= f.label :password_confirmation %>
-        <%= f.text_field :password_confirmation %>
+        <%= f.password_field :password_confirmation %>
       </div>
 
 
@@ -30,9 +30,5 @@
       </div>
 
     <% end %>
-
-    <%= render :partial => "devise/shared/links" %>
-
-
   </div>
 </div>
