--- a/app/views/home/nasil_calisir.html.erb
+++ b/app/views/home/nasil_calisir.html.erb
@@ -3,24 +3,41 @@
   <div class="widget widget-light">
     <div class="w-inner">
       <div class="w-title">Nasıl Çalışır?</div>
-       
 
-        <p>BenVarım, sosyal sorumluluk projeleri için bağış ve tanıtım platformudur.</p>
 
-        <p>Gönüllüsü olduğunuz vakıf veya derneğin, bağış kampanyasına katılarak kendinize bir web sayfası yaratabilirsiniz.  BenVarım ile, sosyal ağınızda bulunan arkadaş, akraba ve diğer gönüllülere kolayca ulaşacak ve daha fazla bağış toplanmasına aracı olacaksınız.</p>
+       <p>“Gönüllü ol, çevrenle paylaş, desteklediğin kurumu yapılan bağışlarla güçlendir!” </p>
 
-        <p>BenVarım, vakıf ve derneklerin seslerini daha geniş kitlelere ulaştırır.</p>
+       <p>BenVarım’da kolaylıkla yaratacağınız bir sayfa ile akraba ve dostlarınıza en hızlı şekilde ulaşacak; destek olduğunuz sosyal yardım kuruluşu için en hızlı ve en eğlenceli yöntemle bağış toplanmasına aracı olacaksınız.</p>
+         <ul>
+           <li>Gönüllü olarak destekleyeceğiniz bir kurum belirleyin.</li>
+           <li>Bir tanıtım sayfası yarattın, bağış hedefi belirleyin ve çevrenizin ilgisini çekecek bir tanıtım yazısı yazın.</li>
+           <li>Facebook, Twitter, eposta ve blog gibi sosyal internet plaform’ları aracılığıyla, kişiselleştirdiğiniz sayfanızı yakın çevrenizle paylaşın.</li>
+           <li>Akraba, dost ve iş arkadaşlarınızın sizin aracılığınızla yapacağı bağışların hızla artmasını sağlayın. Daha fazla paylaşın, daha fazla bağış toplayın. </li>
+           <li>Topladığınız bağışlar desteklediğiniz S.T.K.’nın hesabına giderken, yarattığınız sosyal bilinç ile gurur duyun!</li>
+         </ul>
 
-        <p>BenVarım’ı iki şekilde kullanabilirsiniz:</p>
+       <p>
+         Hemen bağış toplamaya başlamak için, gönüllüsü olacağınız S.T.K.’yı seçin:
+         <form action="<%=url_for :new_page%>" method="get">
+           <div class="field" style="float:left;">
+             <input value="Desteklemek istediğiniz vakıf yada derneği seçiniz..." class="clear-on-focus" id="featured-input"/>
+             <input type="hidden" name="org_id" value="" id="org_id"/>
+           </div>
+           <input type="submit" value="Başla"  id="featured-submit" class="button super yellow button-primary no-margin">
+         </form>
+         <script>
+           var availableOrganizations = <%=raw @available_organizations.to_json%>;
+         </script>
+       </p>
+       <br clear="all"/>
+       <p>
+         **VAKIF ve DERNEKLER** BenVarım platformunu kullanmaya başlamak için kayıt olun.
+         <%=link_to "Yeni Vakıf ve Dernek Kaydı", :new_organization, :class => "button green large"%>
 
-        <h2>1) GÖNÜLLÜ</h2>
-        <p>Hemen sayfanızı yaratın ve gönülllüsü olduğunuz sivil toplum kuruluşu projelerini, facebook, twitter, eposta ve blog’unuz ile sosyal ağınıza duyurun.</p>
-
-        <h2>2)	VAKIF veya DERNEK</h2>
-        <p>BenVarım’da kullanıcı adınızı yaratın ve proje ile kampanyalarınızı kolayca internet ortamına taşıyın. Gönüllülerinizin sosyal ağlarına kolayca ulaşarak hızlıca bağış toplamaya başlayın.</p>
+       </p>
 
       </div>
-    </div> 
+    </div>
 </div><!-- end of #main-content -->
 
 <%= render 'layouts/sidebar'%>
