--- a/app/views/contact_forms/_form.html.erb
+++ b/app/views/contact_forms/_form.html.erb
@@ -11,35 +11,49 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city %>
-  </div>
-  <div class="field">
-    <%= f.label :phone %><br />
-    <%= f.text_field :phone %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :organization %><br />
-    <%= f.text_field :organization %>
-  </div>
-  <div class="field">
-    <%= f.label :organization_role %><br />
-    <%= f.text_field :organization_role %>
-  </div>
-  <div class="field">
-    <%= f.label :other %><br />
-    <%= f.text_area :other %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Gönder"%>
+  <div class="contact-form">
+
+    <div class="field">
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+    </div>
+    <div class="field">
+      <%= f.label :city %>
+      <%= f.text_field :city %>
+    </div>
+    <div class="field">
+      <%= f.label :phone %>
+      <%= f.text_field :phone %>
+    </div>
+    <div class="field">
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+    </div>
+    <div class="field">
+      <%= f.label :organization, :style=> "line-height:20px" %>
+      <%= f.text_field :organization %>
+    </div>
+    <br/>
+    <div class="field">
+      <%= f.label :organization_role %>
+      <%= f.text_field :organization_role %>
+    </div>
+    <div class="field">
+      <%= f.label :other %>
+      <%= f.text_area :other %>
+    </div>
+    <div class="actions">
+      <%= f.submit "Gönder", :class=>"button yellow super button-primary", :style=>"margin-left:200px;width:120px" %>
+    </div>
   </div>
 <% end %>
+
+<style type="text/css" media="screen">
+  .contact-form label {
+    width: 200px;
+  }
+
+  .contact-form input, .contact-form textarea {
+    width: 300px;
+  }
+</style>
