disable share buttons

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -35,8 +35,10 @@
           <div class="share-options">
             <ul>
               <!-- <li><fb:like layout="button_count" show_faces="false" width="150"></fb:like></li> -->
-              <li><a name="fb_share" type="button_count" href="http://www.facebook.com/sharer.php">Facebook'ta Paylaş</a></li>
-              <li><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" >Tweet</a></li>
+              <li><a  target="_blank" name="fb_share" type="button_count" href="javascript:void(alert('Demo aşamasında sayfaları paylaşamazsınız, teşekkürler'))">Facebook'ta Paylaş</a></li>
+              <!-- <li><a  target="_blank" name="fb_share" type="button_count" href="http://www.facebook.com/sharer.php">Facebook'ta Paylaş</a></li> -->
+              <!-- <li><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" >Tweet</a></li> -->
+              <li><a href="javascript:void(alert('Demo aşamasında sayfaları paylaşamazsınız, teşekkürler'))" class="twitter-share-button" data-count="horizontal" >Tweet</a></li>
               <!-- <li><a style="background: url(http://friendfeed.com/static/images/icons/internal.png) 0px 0px no-repeat; padding-left: 20px; margin-left: 30px;" href="http://friendfeed.com/?url=<%= request.url %>&amp;title=<%= @page.title %>" target="_blank">FriendFeed'de Paylaş</a></li> -->
             </ul>
 
