--- a/app/views/home/nasil_calisir.html.erb
+++ b/app/views/home/nasil_calisir.html.erb
@@ -18,16 +18,11 @@
 
        <p>
          Hemen bağış toplamaya başlamak için, gönüllüsü olacağınız S.T.K.’yı seçin:
-         <form action="<%=url_for :new_page%>" method="get">
-           <div class="field" style="float:left;">
-             <input value="Desteklemek istediğiniz vakıf yada derneği seçiniz..." class="clear-on-focus" id="featured-input"/>
-             <input type="hidden" name="org_id" value="" id="org_id"/>
-           </div>
-           <input type="submit" value="Başla"  id="featured-submit" class="button super yellow button-primary no-margin">
-         </form>
-         <script>
-           var availableOrganizations = <%=raw @available_organizations.to_json%>;
-         </script>
+         <%=render :partial => "layouts/quickstart_widget",
+           :locals => {
+             :available_organizations => @available_organizations
+           }
+         %>
        </p>
        <br clear="all"/>
        <p>
