--- a/app/views/projects/our_projects.html.erb
+++ b/app/views/projects/our_projects.html.erb
@@ -1,4 +1,5 @@
 <%=render :partial => "list_projects",
   :locals => {
-    :show_edit_link => true
+    :show_edit_link => true,
+    :projects => @projects
   }%>
